# invoicex

./: .gitignore  Makefile  README.md  pyproject.toml  run.sh
.github/workflows/: jas1.yml  main.yml
conda/: dev.yaml
ghinvoice/: main.py  reader.py  report.py
invoicex/: main.py  reader.py  report.py  ttrack.py
invoicex/reader/: compose.py  ttrack.py
scripts/: config.sh
